# quantization_caffe_yolo

./: README.md
conversion/: darknet2caffe_tiny.py
quantization/: auto_bnscale011.py  bnscale011_script.py  quantization_autoyolocarface.sh  quantization_runonce.sh
quantization/caffe-yolov3/: CMakeLists.txt  README.md  runonce.sh  yolo_layer.cpp  yolo_layer.h
quantization/caffe-yolov3/detectnet/: detectnet.cpp  detectnet.cpp.multi  detectnet.cpp.serial
quantization_python/: eval_carplate.py
quantization_python/convert/: darknet2caffe.py  yolov3-tiny-ZHhands.cfg  yolov3_tiny.prototxt
training/: extract_log.py  k-meansforv3.py  tiny.data  train_loss_visualization.py  yolov3-tiny.cfg
